tests/baselines/reference/parser519458.errors.txt
parser519458.ts(1,15): error TS2503: Cannot find namespace 'module'.
parser519458.ts(1,15): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
parser519458.ts(1,21): error TS1005: ';' expected.


==== parser519458.ts (3 errors) ====
    import rect = module("rect"); var bar = new rect.Rect();
                  ~~~~~~
!!! error TS2503: Cannot find namespace 'module'.
                  ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                        ~
!!! error TS1005: ';' expected.
    